[gd_scene load_steps=8 format=3 uid="uid://caglc8uk2g50v"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_twobj"]
[ext_resource type="PackedScene" uid="uid://c03bn4ttox6bm" path="res://scenes/build_phase/build_phase.tscn" id="1_v80fr"]
[ext_resource type="PackedScene" uid="uid://bqbncjj6167a6" path="res://scenes/search_phase/scenes/search_phase.tscn" id="2_fxd7f"]
[ext_resource type="PackedScene" uid="uid://bsehu8h5432ef" path="res://scenes/dialog_system/scenes/dialog_system.tscn" id="5_u6pyg"]
[ext_resource type="Script" path="res://scenes/level_manager/level_manager.gd" id="6_6mlcy"]
[ext_resource type="Script" path="res://scenes/search_phase/scripts/transition_wall.gd" id="6_g2gvs"]
[ext_resource type="PackedScene" uid="uid://ddty3e47pq7av" path="res://scenes/sound_options_window/scenes/sound_options_window.tscn" id="8_h6gh1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_twobj")

[node name="build_phase" parent="." instance=ExtResource("1_v80fr")]

[node name="search_phase" parent="." instance=ExtResource("2_fxd7f")]
visible = false

[node name="dialog_system" parent="." instance=ExtResource("5_u6pyg")]
visibility_layer = 2
position = Vector2(281, 773)
distance = 500

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("6_6mlcy")

[node name="sound_options_window" parent="." instance=ExtResource("8_h6gh1")]

[node name="TransitionWall" type="ColorRect" parent="."]
visible = false
visibility_layer = 24
z_index = 500
offset_right = 1301.0
offset_bottom = 737.0
color = Color(0, 0, 0, 1)
script = ExtResource("6_g2gvs")
darkening_speed = 0.1
